# augmax

./: .gitignore  .readthedocs.yml  CHANGELOG.md  Playground.ipynb  README.md  Sanity Checks.ipynb  color.py  main.py  pyproject.toml  setup.py  vmap random.ipynb
augmax/: __init__.py  _types.py  base.py  colorspace.py  flags.py  geometric.py  geometric_utils.py  imagelevel.py  optimized.py  utils.py  version.py
augmax/functional/: colorspace.py  geometric.py
docs/: Philosophy.ipynb  conf.py  index.md  installation.md  philosophy.md  requirements.txt
docs/augmentations/: colorspace.rst  geometric.rst  imagelevel.rst
docs/notebooks/: Getting Started.ipynb
docs/sphinx_autoaug/: sphinx_autoaug.py
src/augmax/: __init__.py  colorspace.py  geometric.py  imagelevel.py  optimized.py  utils.py
tests/: .directory  coordinate_ops_test.py
