[project]
name = "augmax"
version = "0.4.0"
description = "Efficiently Composable Data Augmentation on the GPU with Jax"
readme = "README.md"
authors = [
    { name = "Konrad Heidler", email = "k.heidler@tum.de" }
]
requires-python = ">=3.9.0"
dependencies = [
    "einops>=0.3",
    "jax>=0.1",
    "numpy>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8", "uv-dynamic-versioning"]
build-backend = "uv_build"
